2011-01-14  Robin Gareus  <robin@gareus.org>
    * src/waveform.c
    added sndfile-waveform, a waveform image generator

2011-01-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/jackplay.c
    Improve reporting of loop count.

2011-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*.[ch]
    Update copyright years.

    * src/jackplay.c
    Add ability to play a file in a loop.

    * man/sndfile-jackplay.1
    Update with new options.

2011-01-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add AM_SILENT_RULES and other tweaks.

    * src/common.c
    Fix bug in sfx_mix_mono_read_double() where a bunch of crap got appended to
    the end of the mixed down file. Thanks to Tom Szilagyi for the bug report.
    Remove cruft.

2010-04-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/jackplay.c
    Use jack_client_open() instead of deprecated jack_client_new().

    * man/sndfile-spectrogram.1
    Fix two typos reported by Igor Murzov.

2010-02-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Detect presence of libsamplerate.

    * src/resample.c Makefile.am
    Add file originally from the libsamplerate source distribution and hook
    into build.

2009-12-21  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*c
    Remove 'sndfile-' parts of file names.

    * src/jackplay.c
    Reorder JACK initialisation calls to remove click at start of playback.

2009-12-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Don't test for a fortran compiler.

    * man/sndfile-generate-chirp.1 man/sndfile-mix-to-mono.1
	    man/sndfile-spectrogram.1
    New man pages.

    * Makefile.am
    Hook new man pages into build.

    * NEWS doc/index.html
    Update for 1.03 release.

2009-12-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * M4/*.m4 configure.ac
    Rename custom M4 macros to MN_*.
