@@ -1,4 +1,13 @@
+2012-02-25  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * M4/extra_pkg.m4
+    Update PKG_CHECK_MOD_VERSION macro to add an AC_TRY_LINK step. This fix
+    allows the configure process to catch attempts to link incompatible
+    libraries. For example, linking 32 bit version of eg libFLAC to a 64 bit
+    version of sndfile-tools will now fail at the configure stage.
+
 2011-01-14  Robin Gareus  <robin@gareus.org>
+
     * src/waveform.c
     added sndfile-waveform, a waveform image generator
 
